# cpp_project_template

./: CMakeLists.txt  CMakeLists_8txt.html  Makefile  README.md  README_8md.html  animal_8cpp.html  animal_8cpp__incl.dot  animal_8h.html  animal_8h__dep__incl.dot  animal_8h__incl.dot  animal_8h_source.html  annotated.html  annotated_dup.js  classDEMO_1_1Animal-members.html  classDEMO_1_1Animal.html  classDEMO_1_1Animal.js  classDEMO_1_1Animal__inherit__graph.dot  classDEMO_1_1Bird-members.html  classDEMO_1_1Bird.html  classDEMO_1_1Bird.js  classDEMO_1_1Bird__inherit__graph.dot  classDEMO_1_1Dog-members.html  classDEMO_1_1Dog.html  classDEMO_1_1Dog.js  classDEMO_1_1Dog__inherit__graph.dot  classDEMO_1_1Op-members.html  classDEMO_1_1Op.html  classes.html  dir_3756d50f4003bc63fa3fe49460f9c79d.html  dir_3756d50f4003bc63fa3fe49460f9c79d.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  (+21 more)
.github/workflows/: build.yml  docs.yml
docs/: CMakeLists.txt  Doxyfile.in  internal.md
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js
src/: CMakeLists.txt  animal.cpp  animal.h
src/internal/: ops.cpp  ops.h
test/: CMakeLists.txt  test_example.cpp  test_ops.cpp
